--- a/cn-resume.html
+++ b/cn-resume.html
@@ -605,7 +605,7 @@
             <strong><a href="http://tum.de" target="_blank">德国 · 慕尼黑工业大学</a></strong> (物理系)<br>
           <li>2015-2015 | <strong>实习生, 水环境与污染建模</strong>
             <div style="float: right"></div><br>
-            <strong><a href="http://enpc.fr" target="_blank">法国 · 国立路桥大学</a></strong> (巴黎高科)<br>
+            <strong><a href="http://enpc.fr" target="_blank">法国 · 巴黎理工学院</a></strong> (巴黎高科路桥学院)<br>
           <li>2015-2015 | <strong>实习生, 材料成像与动力学</strong>
             <div style="float: right"></div><br>
             <strong><a href="http://xfel.eu" target="_blank">欧盟 · X射线自由电子激光器</a></strong> (德国汉堡)<br>
