--- a/en-research.html
+++ b/en-research.html
@@ -604,72 +604,96 @@
         </ul>
         <ol>
           <li>
-            S. N. Artigas, <strong>H. Xu*</strong> [FDB], F. Mack<br />
+            S. N. Artigas, <strong>H. Xu*</strong> [FDB], F. Mack<br>
             Use of distribution of relaxation times analysis as an in-situ diagnostic tool for water management in PEM
-            fuel cells applications [J] <br />
+            fuel cells applications [J] <br>
+            Co-author: <text style="color:rgb(37, 84, 238)">[Freudenberg]</text> | Cited by: <text
+              style="color:rgb(133, 36, 197)">[Tsinghua Univ.]</text> <br>
             2024 | <em><strong>J. Power Sources</strong></em> [<a
               href="https://www.sciencedirect.com/science/article/abs/pii/S0378775324001307" target="_blank">PDF</a>]
-            <text style="color:rgb(0, 103, 159)">[Freudenberg]</text> <text style="color:red">[New!]</text>
+            <text style="color:rgb(0, 103, 159)"></text> <text style="color:red"></text>
           </li>
+
           <li>
-            <strong>H. Xu*</strong> [PSI], M. Bührer, F. Marone, Prof. T. J. Schmidt, F. N. Büchi, J. Eller<br />
+            <strong>H. Xu*</strong> [PSI], M. Bührer, F. Marone, Prof. T. J. Schmidt, F. N. Büchi, J.
+            Eller<br>
             Effects of gas diffusion layer substrates on PEFC water management: Part II. In situ liquid water
-            desaturation via evaporation [J] <br />
+            desaturation via evaporation [J] <br>
+            Co-author: <text style="color:rgb(8, 114, 31)">[Swiss Light Source]</text> | Cited by: <text
+              style="color:rgb(250, 49, 14)">[TOYOTA]</text> <text style="color:rgb(141, 20, 20)">[BOSCH]</text><br>
             2022 | <em><strong>J. Electrochem. Soc.</strong></em> [<a
-              href="https://iopscience.iop.org/article/10.1149/1945-7111/ac94a2" target="_blank">PDF</a>] <text
-              style="color:rgb(8, 114, 31)">[SLS]</text>
+              href="https://iopscience.iop.org/article/10.1149/1945-7111/ac94a2" target="_blank">PDF</a>]
           </li>
+
           <li>
-            <strong>H. Xu*</strong> [PSI], S. Nagashima [Toyota], H. Nguyen, K. Kishita, F. Marone, F. N. Büchi, J.
-            Eller [PSI]<br />
-            Temperature dependent water transport mechanism in PEFC gas diffusion layers revealed by subsecond operando
-            X-ray tomographic microscopy. [J] <br />
+            S. van Rooij, M. Magnini, A. Mularczyk, <strong>H. Xu*</strong> [PSI], F. N. Büchi [PSI], Prof.
+            S. Haussener
+            [EPFL]<br>
+            Conductive heat transfer in partially saturated gas diffusion layers with evaporative cooling [J] <br>
+            Co-author: <text style="color:rgb(8, 114, 31)">[Swiss Light Source]</text> <text
+              style="color:rgb(250, 49, 14)">[EPFL]</text> <br>
+            2022 | <em><strong>J. Electrochem. Soc.</strong></em> [<a
+              href="https://iopscience.iop.org/article/10.1149/1945-7111/ac4e5c" target="_blank">PDF</a>]
+          </li>
+
+          <li>
+            <strong>H. Xu*</strong> [PSI], S. Nagashima [TOYOTA], H. Nguyen, K. Kishita, F. Marone, F. N.
+            Büchi, J.
+            Eller [PSI]<br>
+            Temperature dependent water transport mechanism in PEFC gas diffusion layers revealed by
+            subsecond operando
+            X-ray tomographic microscopy. [J] <br>
+            Co-author: <text style="color:rgb(250, 49, 14)">[TOYOTA]</text> | Cited by: <text
+              style="color:rgb(141, 20, 20)">[BOSCH]</text> <text style="color:rgb(133, 36, 197)">[Tsinghua
+              Univ.]</text> <text style="color:rgb(36, 95, 197)">[Univ. of Toronto]</text><br>
             2021 | <em><strong>J. Power Sources </strong></em> [<a
-              href="https://www.sciencedirect.com/science/article/pii/S0378775321000422" target="_blank">PDF</a>] <text
-              style="color:rgb(8, 114, 31)">[SLS]</text> <text style="color:rgb(250, 49, 14)">[Toyota]</text>
+              href="https://www.sciencedirect.com/science/article/pii/S0378775321000422" target="_blank">PDF</a>]
 
           </li>
+
           <li>
-            <strong>H. Xu*</strong> [PSI], M. Bührer, F. Marone, Prof. T. J. Schmidt [ETH], F. N. Büchi, J. Eller
-            [PSI]<br />
-            Effects of gas diffusion layer substrates on PEFC water management: Part I. Operando liquid water
-            saturation
-            and gas diffusion properties [J] <br />
+            <strong>H. Xu*</strong> [PSI], M. Bührer, F. Marone, Prof. T. J. Schmidt [ETH], F. N. Büchi, J.
+            Eller
+            [PSI]<br>
+            Effects of gas diffusion layer substrates on PEFC water management: Part I. Operando liquid
+            water saturation
+            and gas diffusion properties [J] <br>
+            Co-author: <text style="color:rgb(8, 114, 31)">[Swiss Light Source]</text>| Cited by: <text
+              style="color:rgb(74, 7, 241)">[German Aerospace Center]</text> <text
+              style="color:rgb(250, 49, 14)">[TOYOTA]</text> <text style="color:rgb(133, 36, 197)">[Tsinghua
+              Univ.]</text><br>
             2021 | <em><strong>J. Electrochem. Soc.</strong></em> [<a
-              href="https://iopscience.iop.org/article/10.1149/1945-7111/ac1035" target="_blank">PDF</a>] <text
-              style="color:rgb(8, 114, 31)">[SLS]</text>
+              href="https://iopscience.iop.org/article/10.1149/1945-7111/ac1035" target="_blank">PDF</a>]
           </li>
 
-
           <li>
-            C. Csoklich, <strong>H. Xu*</strong> [PSI], F. Marone, Prof. T. J. Schmidt [ETH], F. N. Büchi [PSI]<br />
-            Laser Structured Gas Diffusion Layers for Improved Water Transport and Fuel Cell Performance [J] <br />
+            C. Csoklich, <strong>H. Xu*</strong> [PSI], F. Marone, Prof. T. J. Schmidt [ETH], F. N. Büchi
+            [PSI]<br>
+            Laser Structured Gas Diffusion Layers for Improved Water Transport and Fuel Cell Performance [J]
+            <br>
+            Co-author: <text style="color:rgb(8, 114, 31)">[Swiss Light Source]</text> | Cited by: <text
+              style="color:rgb(74, 7, 241)">[Tokyo Institute of Technology]</text> <text
+              style="color:rgb(248, 114, 5)">[Hong Kong Univ. of Science and Technology]</text> <text
+              style="color:rgb(133, 36, 197)">[Tsinghua Univ.]</text><br>
             2021 | <em><strong>ACS Appl. Energy Mater. </strong></em> [<a
-              href="https://pubs.acs.org/doi/full/10.1021/acsaem.1c02454" target="_blank">Link</a>] <text
-              style="color:rgb(8, 114, 31)">[SLS]</text>
+              href="https://pubs.acs.org/doi/full/10.1021/acsaem.1c02454" target="_blank">PDF</a>]
           </li>
+
           <li>
-            S. van Rooij, M. Magnini, A. Mularczyk, <strong>H. Xu*</strong> [PSI], F. N. Büchi [PSI], Prof. S. Haussener
-            [EPFL]<br />
-            Conductive heat transfer in partially saturated gas diffusion layers with evaporative cooling [J] <br />
-            2022 | <em><strong>J. Electrochem. Soc.</strong></em> [<a
-              href="https://iopscience.iop.org/article/10.1149/1945-7111/ac4e5c" target="_blank">PDF</a>] <text
-              style="color:rgb(8, 114, 31)">[SLS]</text> <text style="color:rgb(250, 49, 14)">[EPFL]</text>
-          </li>
-          <li>
-            Y. Nagai [Toyota], J. Eller, T. Hatanaka, S. Yamaguchi, S. Kato, A. Kato, F. Marone, <strong>H.
-              Xu*</strong>
-            [PSI], F. N. Büchi. <br />
+            Y. Nagai [TOYOTA], J. Eller, T. Hatanaka, S. Yamaguchi, S. Kato, F. Marone, <strong>H.
+              Xu*</strong> [PSI],
+            F. N. Büchi. <br>
             Improving water management in fuel cells through microporous layer modifications: Fast operando
             tomographic
-            imaging of liquid water. [J] <br />
+            imaging of liquid water. [J] <br>
+            Co-author: <text style="color:rgb(250, 49, 14)">[TOYOTA]</text> | Cited by: <text
+              style="color:rgb(241, 26, 7)">[MIT]</text> <text style="color:rgb(74, 7, 241)">[German Aerospace
+              Center]</text> <text style="color:rgb(7, 38, 241)">[State Power Investment Co.]</text><br>
             2019 | <em><strong>J. Power Sources </strong></em> [<a
-              href="https://www.sciencedirect.com/science/article/abs/pii/S0378775319307943" target="_blank">Link</a>]
-            <text style="color:rgb(8, 114, 31)">[SLS]</text> <text style="color:rgb(250, 49, 14)">[Toyota]</text>
+              href="https://www.sciencedirect.com/science/article/abs/pii/S0378775319307943" target="_blank">PDF</a>]
           </li>
-
-
         </ol>
+
 
 
         <ul class="square">
@@ -677,60 +701,65 @@
         </ul>
 
         <ol>
-
           <li>
             M. Bührer, <strong>H. Xu*</strong> [PSI], A. Hendriksend, F. N. Büchi, J. Eller, Prof. M. Stampanoni [ETH],
-            F. Marone [SLS]<br />
-            Deep learning based classification of dynamic processes in time-resolved XTM [J] <br />
+            F. Marone [SLS]<br>
+            Deep learning based classification of dynamic processes in time-resolved XTM [J] <br>
+            Co-author: <text style="color:rgb(8, 114, 31)">[Swiss Light Source/PSI]</text> <text
+              style="color:rgb(191, 9, 228)">[CWI Amsterdam]</text> | Cited by: <text
+              style="color:rgb(236, 52, 36)">[Stanford Univ.]</text> <text style="color:rgb(12, 26, 230)">[RWTH
+              Aachen]</text> <br>
             2021 | <em><strong>Scientific Reports </strong></em> [<a
-              href="https://www.nature.com/articles/s41598-021-03546-8" target="_blank">PDF</a>] <text
-              style="color:rgb(8, 114, 31)">[SLS]</text> <text style="color:rgb(191, 9, 228)">[CWI.Amsterdam]</text>
+              href="https://www.nature.com/articles/s41598-021-03546-8" target="_blank">PDF</a>]
           </li>
-
           <li>
-            M. Bührer, <strong>H. Xu*</strong> [PSI], J. Eller, J. Sijbers, Prof. M. Stampanoni [ETH], F. Marone
-            [SLS]<br />
-            Unveiling water dynamics in fuel cells from time-resolved tomographic microscopy data [J] <br />
-            2021 | <em><strong>Scientific Reports </strong></em> [<a
-              href="https://www.nature.com/articles/s41598-020-73036-w" target="_blank">PDF</a>] <text
-              style="color:rgb(8, 114, 31)">[SLS]</text> <text style="color:rgb(104, 9, 228)">[U.Antwerp]</text>
+            M. Bührer, <strong>H. Xu*</strong> [PSI], J. Eller, Prof. J. Sijbers, Prof. M. Stampanoni [ETH],
+            F. Marone [SLS]<br>
+            Unveiling water dynamics in fuel cells from time-resolved tomographic microscopy data [J] <br>
+            Co-author: <text style="color:rgb(8, 114, 31)">[Swiss Light Source/PSI]</text> <text
+              style="color:rgb(104, 9, 228)">[Univ. of Antwerp]</text> | Cited by: <text
+              style="color:rgb(248, 101, 15)">[Univ. of Tokyo]</text> <text style="color:rgb(12, 117, 230)">[Univ. of
+              Toronto]</text> <br>
+            2021 | <em><strong>Scientific Reports</strong></em> [<a
+              href="https://www.nature.com/articles/s41598-020-73036-w" target="_blank">PDF</a>]
           </li>
-
-
 
           <li>
             <strong>H. Xu*</strong> [PSI], M. Bührer, F. Marone, Prof. T. J. Schmidt [ETH], F. N. Büchi, J. Eller
-            [PSI]<br />
-            Optimal image denoising for operando XTM of liquid water in PEFC gas diffusion layers. [J] <br />
+            [ETH]<br>
+            Optimal image denoising for operando XTM of liquid water in PEFC gas diffusion layers. [J] <br>
+            Co-author: <text style="color:rgb(8, 114, 31)">[Swiss Light Source/PSI]</text> | Cited by: <text
+              style="color:rgb(74, 7, 241)">[CAS Dalian Institute of Chemical Physics]</text> <text
+              style="color:rgb(250, 49, 14)">[Univ. of Toronto]</text> <text style="color:rgb(133, 36, 197)">[Univ.
+              College London]</text> <br>
             2020 | <em><strong>J. Electrochem. Soc. </strong></em> [<a
-              href="https://www.research-collection.ethz.ch/handle/20.500.11850/422241" target="_blank">PDF</a>] <text
-              style="color:rgb(8, 114, 31)">[SLS]</text>
+              href="https://www.research-collection.ethz.ch/handle/20.500.11850/422241" target="_blank">PDF</a>]
           </li>
 
           <li>
-            <strong>H. Xu*</strong> [PSI], F. Marone, S. Nagashima [Toyota], H. Nguyen, K. Kishita, F. N. Büchi, J.
-            Eller [PSI]<br />
-            <strong>(Invited)</strong> Exploring sub-second and sub-micron XTM imaging of liquid water in PEFC
-            GDLs.[J]
-            <br />
+            <strong>H. Xu*</strong> [PSI], F. Marone, S. Nagashima, H. Nguyen, K. Kishita, F. N. Büchi, J. Eller<br>
+            <strong>(Invited)</strong> Exploring sub-second and sub-micron XTM imaging of liquid water in PEFC GDLs. [J]
+            <br>
+            Co-author: <text style="color:rgb(8, 114, 31)">[Swiss Light Source/PSI]</text> <text
+              style="color:rgb(250, 49, 14)">[TOYOTA]</text> | Cited by: <text style="color:rgb(14, 97, 250)">[European
+              Synchrotron Radiation Facility]</text> <text style="color:rgb(250, 49, 14)">[US National Fuel Cell
+              Research Center]</text> | <text style="color:rgb(14, 97, 250)">[ECS Meeting Travel Award]</text><br />
             2019 | <em><strong>ECS Transactions </strong></em> [<a
-              href="https://iopscience.iop.org/article/10.1149/09208.0011ecst" target="_blank">PDF</a>] <text
-              style="color:rgb(8, 114, 31)">[SLS]</text> <text style="color:rgb(250, 49, 14)">[Toyota]</text> <text
-              style="color:rgb(14, 97, 250)">[ECS Travel Grant]</text>
+              href="https://iopscience.iop.org/article/10.1149/09208.0011ecst" target="_blank">PDF</a>]
           </li>
-
 
           <li>
             <strong>H. Xu*</strong> [PSI], M. Bührer, F. Marone, Prof. T. J. Schmidt [ETH], F. N. Büchi, J. Eller
-            [PSI]<br />
-            Fighting the noise: towards the limits of subsecond X-ray tomographic microscopy of PEFC. [J] <br />
-            2017 | <em><strong>ECS Transactions </strong></em><strong></strong></em> [<a
-              href="https://www.research-collection.ethz.ch/handle/20.500.11850/224830" target="_blank">Link</a>]
-            <text style="color:rgb(8, 114, 31)">[SLS]</text> <text style="color:rgb(14, 97, 250)">[ModVal Poster
-              Award]</text>
+            [PSI]<br>
+            Fighting the noise: towards the limits of subsecond X-ray tomographic microscopy of PEFC. [J] <br>
+            Co-author: <text style="color:rgb(8, 114, 31)">[Swiss Light Source/PSI]</text> | Cited by: <text
+              style="color:rgb(74, 7, 241)">[Argonne National Laboratory]</text> <text
+              style="color:rgb(250, 49, 14)">[TOYOTA]</text> | <text style="color:rgb(8, 114, 31)">[Swiss Light
+              Source]</text> | <text style="color:rgb(14, 97, 250)">[ModVal
+              Best Poster Award]</text><br>
+            2017 | <em><strong>ECS Transactions </strong></em> [<a
+              href="https://www.research-collection.ethz.ch/handle/20.500.11850/224830" target="_blank">PDF</a>]
           </li>
-
-
         </ol>
 
         <ul class="square">
@@ -739,29 +768,30 @@
 
         <ol>
           <li>
-            Prof. H. Zhang, R. Wu, <strong>H. Xu*</strong> [BJTU], F. Li, S. Wang, J. Wang [BJUT], T. Zhang <br />
+            Prof. H. Zhang, R. Wu, <strong>H. Xu*</strong> [BJTU], F. Li, S. Wang, J. Wang [BJUT], T. Zhang
+            <br>
             A simple spray reaction synthesis and characterization of hierarchically porous SnO2 microspheres for an
-            enhanced dye sensitized solar cell. [J] <br />
+            enhanced dye sensitized solar cell. [J] <br>
             2017 | <em><strong>RSC Advances</strong></em> [<a
-              href="https://pubs.rsc.org/en/content/articlelanding/2017/ra/c6ra27235e#!divAbstract" target="_blank">Link
-              </Link></a>] <text style="color:rgb(14, 144, 250)">[BJTU]</text>
+              href="https://pubs.rsc.org/en/content/articlelanding/2017/ra/c6ra27235e#!divAbstract"
+              target="_blank">PDF</a>] <text style="color:rgb(14, 144, 250)">[BJTU]</text>
           </li>
 
           <li>
-            Prof. H. Zhang [BJTU], <strong>H. Xu*</strong> [BJTU], J. Wan, Prof. L. Yan, C. Dai <br />
-            Preparations of new porous oxides spherical powders by spray reaction technique.[J] <br />
-            2012 | <em><strong>Vacuum & Cryogenics</strong></em> [<a
-              href="https://tow.cnki.net/kcms/detail/detail.aspx?filename=ZKDW201203005&dbcode=CRJT_CJFD&dbname=CJFD2012&v="
-              target="_blank">Link (CN)</a>] <text style="color:rgb(14, 144, 250)">[BJTU]</text>
+            Prof. H. Zhang [BJTU], <strong>H. Xu*</strong> [BJTU], J. Wan, Prof. L. Yan, C. Dai<br>
+            Preparations of new porous oxides spherical powders by spray reaction technique. [J]<br>
+            2012 | <em><strong>Vacuum and Cryogenics</strong></em> [<a
+              href="https://kns.cnki.net/kcms/detail/detail.aspx?dbcode=CJFD&dbname=CJFD2012&filename=ZKDW201203005&uniplatform=NZKPT&v=n8kUCXQ29XK8uOcXQdI-5jgJqVfzr5uxF9oPXi_7Jb8CNlMTVCM7mmeU-Xw7WoTH"
+              target="_blank">Link</a>] <text style="color:rgb(14, 144, 250)">[BJTU]</text>
           </li>
 
           <li>
-            X. Qi, <strong>H. Xu*</strong> [BJTU], X. Zhou <br />
-            Degradation of highly active cypermethrin via ultrasonic irradiation combined with TiO2 photocatalysis.[J]
-            <br />
-            2012 | <em><strong>Chem. Res.</strong></em></em> [<a
-              href="http://hxya.chinajournal.net.cn/WKB/WebPublication/paperDigest.aspx?paperID=10f49d02-6d79-49d1-93cf-d1d7a98f9887"
-              target="_blank">Link (CN)</a>] <text style="color:rgb(14, 144, 250)">[BJTU]</text>
+            Q. Xiaoyue, <strong>H. Xu*</strong> [BJTU], X. Zhou <br>
+            Degradation of highly active cypermethrin via ultrasonic irradiation combined with photocatalysis by
+            TiO2<br>
+            2012 | <em><strong>Chemistry Research</strong></em> [<a
+              href="https://kns.cnki.net/kcms/detail/detail.aspx?filename=HXYA201203011&dbname=cjfdtotal&dbcode=CJFD&v=MTUxNDFnOC96aFlVN3pzT1QzaVFyUmN6RnJDVVI3aWVadVJ0RmkzaFVidk1MVFhTYjdHNEg5UE1ySTlFWllSNkQ="
+              target="_blank">Link</a>] <text style="color:rgb(14, 144, 250)">[BJTU]</text>
           </li>
         </ol>
       </div>
