--- a/en-resume.html
+++ b/en-resume.html
@@ -446,15 +446,15 @@
         <ul class="square">
           <li>2017-2021 | <strong>PhD, Renewable Energy </strong><br />
             <strong><a href="https://ethz.ch/en.html" target="_blank">Swiss Federal Institute of Technology - ETH
-                Zurich</a></strong>, Switzerland</p>
+                Zurich</a></strong>, Switzerland<br />
 
           <li>2014-2016 | <strong>MSc, Materials & Physics </strong><br />
             <strong><a href="https://www.tum.de/en/" target="_blank">Technical University of Munich</a></strong>,
             Germany<br />
-            <strong><a href="https://www.lmu.de/en/" target="_blank">Ludwig Maximilian University of
-                Munich</a></strong>, Germany<br /></p>
-            <!--<strong><a href="https://www.univ-rennes1.fr/" target="_blank">University of Rennes I</a></strong>, France
-            <br /></p>-->
+            <!-- <strong><a href="https://www.lmu.de/en/" target="_blank">Ludwig Maximilian University of
+                Munich</a></strong>, Germany<br /> -->
+            <strong><a href="https://www.univ-rennes1.fr/" target="_blank">University of Rennes</a></strong>, France
+            <br />
             <!--[<a href="https://unknown/files/Master_Thesis_LMU_TUM-Xu_Hong.pdf" target="_blank">Thesis</a>]-->
 
           <li>2009-2013 | <strong>BSc, Materials Chemistry</strong><br />
@@ -466,9 +466,9 @@
             <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">University of Cambridge - Judge Business
                 School</a></strong>,
             UK<br />
-            <!--<li>2020-2021 | <strong>MBA, Business Administration </strong>(part-time)<br />
+          <li>2020-2021 | <strong>MBA, Business Administration </strong>(part-time)<br />
             <strong><a href="https://quantic.edu/mba" target="_blank">Quantic School of Business</a></strong>,
-            Washington D.C.<br /></p>-->
+            Washington D.C.<br /></p>
 
         </ul>
       </div>
@@ -525,30 +525,30 @@
             - <strong>Academic Reviewer at the St. Gallen Symposium</strong> (St. Gallen Symposium, 2023-2024)<br>
             <hr> -->
           <li><strong>Reviewer (40+ papers): </strong><br>
-            - <strong>Journal of Energy Conversion & Management</strong> (Impact Factor: 11.2, 2021)<br>
-            - <strong>Journal of Applied Energy</strong> (Impact Factor: 11.4, 2022)<br>
+            - <strong>Energy Conversion and Management</strong> (Impact Factor: 11.2, 2021)<br>
+            - <strong>Applied Energy</strong> (Impact Factor: 11.4, 2022)<br>
             - <strong>Journal of Power Sources</strong> (Impact Factor: 9.13, 2022)<br>
             - <strong>Energy Strategy Reviews</strong> (Impact Factor: 8.3, 2023)<br>
             - <strong>International Journal of Hydrogen Energy</strong> (Impact Factor: 7.14, 2021)<br>
             - <strong>Energy for Sustainable Development</strong> (Impact Factor: 5.76, 2021)<br>
             - <strong>International Journal of Heat and Mass Transfer</strong> (Impact Factor: 5.58, 2022)<br>
-            - <strong>Journal of Green Technology and Sustainability</strong> (New Journal, 2022)<br>
-            - <strong>Journal of Green Energy and Intelligent Transportation</strong> (New Journal, 2022)<br>
+            - <strong>Green Technology and Sustainability</strong> (New Journal, 2022)<br>
+            - <strong>Green Energy and Intelligent Transportation</strong> (New Journal, 2022)<br>
             <hr>
           <li><strong>Teaching Assistant: </strong><br>
-            - <strong>Renewable Energy Technologies II</strong> (ETH Zurich, Master's Course, 2017-2019 [<a
+            - <strong>Renewable Energy Technologies II</strong> [<a
               href="http://www.vvz.ethz.ch/Vorlesungsverzeichnis/lerneinheit.view?semkez=2018S&ansicht=ALLE&lerneinheitId=120719&lang=en"
-              target="_blank">Link</a>])
+              target="_blank">Link</a>] (ETH Zurich, Master's Course, 2017-2019)
             <hr>
           <li><strong>Student Mentoring: </strong><br>
             - <strong>TUM Alumni Mentoring Program</strong> (2021-present)<br>
             - <strong>PSI Research Mentor</strong> (PSI Imaging Processing Interns, 2018-2019)<br>
             <hr>
           <li><strong>Academic/Professional Associations: </strong><br>
-            - <strong>Member of the Association of German Engineers</strong> (VDI, 2023)<br>
-            - <strong>Invited Article/Conference Grant by the Electrochemical Society</strong> (ECS, 2019)<br>
-            - <strong>Member of the International Society of Electrochemistry</strong> (ISE, 2018)<br>
-            - <strong>Member of the German Physical Society</strong> (DPG, 2016)
+            - Member, <strong>Association of German Engineers</strong> (VDI, 2023)<br>
+            - Invited Paper/Travel Grant<strong> The Electrochemical Society</strong> (ECS, 2019)<br>
+            - Member, <strong>International Society of Electrochemistry</strong> (ISE, 2018)<br>
+            - Member, <strong>German Physical Society</strong> (DPG, 2016)
         </ul>
       </div>
 
@@ -614,20 +614,8 @@
         <h3>Professional Training</h3>
         <ul class="square">
           <li>
-            2023 | <strong>Green Transition Skills Executive Program</strong>,
-            <em>Cambridge Judge Business School</em>, Cambridge, UK.
-          </li>
-          <li>
             2020 | <strong>Oxford Machine Learning Summer School</strong>,
             <em>Oxford Saïd Business School</em>, Oxfordshire, UK.
-          </li>
-          <li>
-            2020 | <strong>Applied Machine Learning Program</strong>,
-            <em>EPFL</em>, Lausanne, Switzerland.
-          </li>
-          <li>
-            2020 | <strong>Applications of Industrial CT Imaging</strong>,
-            <em>University of Applied Sciences Upper Austria</em>, Wels, Austria.
           </li>
           <li>
             2019 | <strong>IBM Data Science Professional Certificate</strong>,
@@ -648,10 +636,6 @@
             <em>deeplearning.ai & Coursera</em>, USA. [<a
               href="https://www.coursera.org/account/accomplishments/verify/ZL4B8AXLLQ8P?utm_medium=certificate&utm_source=link&utm_campaign=copybutton_certificate"
               target="_blank">Certificate</a>]
-          </li>
-          <li>
-            2019 | <strong>Swiss Mobility Program</strong>,
-            <em>Department of Banking and Finance, University of Zurich</em>, Switzerland.
           </li>
           <li>
             2017 | <strong>Biomedical Imaging Summer School</strong>,
@@ -689,11 +673,7 @@
             <em>Intel & Udacity</em>, USA.
           </li>
           <li>
-            2019 | <strong>JES Editor's Highlight</strong>,
-            <em>Journal of The Electrochemical Society (JES)</em>, USA.
-          </li>
-          <li>
-            2019 | <strong>ECS Meeting Travel Award</strong>,
+            2019 | <strong>ECS Meeting Travel Grant</strong>,
             <em>Funded by The Electrochemical Society</em>, Washington D.C., USA.
           </li>
           <li>
@@ -705,20 +685,12 @@
             <em>EU Education, Audiovisual and Culture Executive Agency</em>, France.
           </li>
           <li>
-            2012 | <strong>TECO Finalist Award</strong>,
-            <em>Taipei TECO Technology Foundation</em>, Taipei, China.
-          </li>
-          <li>
             2012 | <strong>National Bronze Award</strong>,
             <em>8th "Challenge Cup" Business Plan Competition</em>, Beijing, China.
           </li>
           <li>
             2012 | <strong>Innovation Scholarship</strong>,
             <em>Awarded by Beijing Jiaotong University</em>, Beijing, China.
-          </li>
-          <li>
-            2010 | <strong>Three Consecutive Years Study Scholarship</strong>,
-            <em>Beijing Jiaotong University</em>, Beijing, China.
           </li>
         </ul>
       </div>
