--- a/de-activities.html
+++ b/de-activities.html
@@ -327,7 +327,7 @@
     <div class="hidden-mobile" class="three columns sidebar">
       <nav>
         <h3 id="logo" style="text-align:center;">
-          <img id="optionalstuff" src="images/hong8.png" width="155" />
+          <img id="optionalstuff" src="images/banner_cns6_left.gif" width="155" />
           <div style="margin-bottom: 18px;"></div>
           <h3 class="hidden-mobile" align="left">Dr. Hong Xü</h3>
 
@@ -344,6 +344,7 @@
             <li><a href="#writing">&nbsp;• Schreiben</a></li>
             <li><a href="#visiting">&nbsp;• Besuche</a></li>
             <li><a href="#travel">&nbsp;• Reisen</a></li>
+            <li><a href="#sports">&nbsp;• Sportarten</a></li>
             <p>____</p>
             <li><a href="#contact"><span style="color: rgb(253, 93, 7);">Kontakt</span></a></li>
             <p>____</p>
@@ -362,78 +363,11 @@
       <!--<img class="hidden-mobile" src="images/banner_de2.png" width="800" />-->
 
       <div class="image-wrapper hidden-mobile">
-        <img src="images/banner_de3.gif" width="800" alt="banner Image" />
-
-        <div class="orange-dot" alt="Hamburg" style="top: 23.1%; left: 50.9%;"></div>
-        <div class="orange-dot" alt="Paris" style="top: 29.5%; left: 48.4%;"></div>
-        <div class="orange-dot" alt="Munich" style="top: 31.3%; left: 51.6%;"></div>
-        <div class="orange-dot" alt="Rennes" style="top: 32.3%; left: 47.2%;"></div>
-        <div class="orange-dot" alt="Zurich" style="top: 33.5%; left: 50.6%;"></div>
-        <div class="orange-dot" alt="Beijing" style="top: 43.6%; left: 90.2%;"></div>
-        <div class="orange-dot" alt="Anqing" style="top: 54.9%; left: 90.8%;"></div>
-        <div class="orange-dot" alt="DC" style="top: 44.7%; left: 19.05%;"></div>
-        <div class="orange-dot" alt="Oxford" style="top: 26.7%; left: 46.9%;"></div>
-
-        <div class="red-dot" alt="Munich" style="top: 31.3%; left: 51.6%; z-index: 9999;"></div>
-
-
-        <div class="tooltip" style="top:50%; left: 65%;">
-          <h6><img src="images/flag_de.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            Hamburg, Deutschland</h6>
-          <p>2015</p>
-        </div>
-        <div class="tooltip" style="top:54%; left:41%;">
-          <h6><img src="images/flag_fr.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            Paris, Frankreich</h6>
-          <p>2016</p>
-        </div>
-
-        <div class="tooltip" style="top:60%; left: 70%;">
-          <h6><img src="images/flag_de.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            München, Deutschland</h6>
-          <p>2015-16</p>
-          <p>2021-24</p>
-        </div>
-
-        <div class="tooltip" style="top:58%; left: 39%;">
-          <h6><img src="images/flag_fr.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            Rennes, Frankreich</h6>
-          <p>2014-15</p>
-        </div>
-        <div class="tooltip" style="top:64%; left:68%;">
-          <h6><img src="images/flag_ch.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            Zürich, Schweiz</h6>
-          <p>2017-21</p>
-          <p>2016-21</p>
-        </div>
-        <div class="tooltip" style="top:60%; left: 80%;">
-          <h6><img src="images/flag_cn.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            Peking, China</h6>
-          <p>2009-13</p>
-        </div>
-        <div class="tooltip" style="top:80%; left: 80%;">
-          <h6><img src="images/flag_cn.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            Anqing, China</h6>
-          <p>1993–2009</p>
-        </div>
-        <div class="tooltip" style="top:55%; left: 37%;">
-          <h6><img src="images/flag_us.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            Washington, D.C., USA</h6>
-          <p>2019-21</p>
-        </div>
-
+        <img src="images/banner_de6.gif" width="800" alt="banner Image" />
+        <div class="orange-dot-eth" alt="Munich" style="top: 19.3%; left: 60.6%; z-index: 9999;"></div>
       </div>
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile">Servus! Grüezi! <small><small><small> Freunde aus <span id="location">aller Welt</span>
-              :-)</small></small> </small>
+      <h3 class="hidden-mobile">Freizeitaktivitäten<small><small><small></small></small> </small>
         <span style="float:right;font-family:verdana;">
           <img src="images/flag_de.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
           <img src="images/flag_ch.png" alt="flag" style="height:16px;display:inline-block;top:3px;position:relative;">
@@ -675,7 +609,7 @@
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="sports" style="width:111%">
-        <h3>Sport</h3>
+        <h3>Sportarten</h3>
         <ul class="square">
           <li>
             <strong>Seen-/Berg-Radtouren</strong><br><br>
