--- a/de.html
+++ b/de.html
@@ -531,9 +531,10 @@
         Deutschland. Dr. Xu's Leidenschaft für wirkungsvolle Forschung führte zu langfristigen Engagements mit
         Branchenführern im Bereich Wasserstoff und Brennstoffzellen, einschließlich <strong>Toyota Motor</strong> in
         Japan und der <strong>Freudenberg Gruppe</strong> in Deutschland. Parallel dazu verfolgte er einen
-        <strong>MBA</strong> an der <strong><a href="https://quantic.edu/mba" target="_blank">Quantische Schule für
+        <strong>MBA</strong> an der <strong><a href="https://quantic.edu/mba" target="_blank">Quantischen Schule für
             Wirtschaft</a></strong> und absolvierte Executive-Kurse an der <strong><a href="https://www.jbs.cam.ac.uk/"
-            target="_blank">Cambridge Judge Business School</a></strong>, wobei er praktische Erfahrungen bei einem
+            target="_blank">Wirtschaftsschule der Universität Cambridge</a></strong>, wobei er praktische
+        Erfahrungen bei einem
         zweisprachigen Risikokapitalunternehmen und einem führenden Wertpapierunternehmen in China sammelte.
       </p>
 
