--- a/en-activities.html
+++ b/en-activities.html
@@ -342,7 +342,7 @@
       </div>
 
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile">Extracurricular Activties<small><small><small></small></small> </small>
+      <h3 class="hidden-mobile">Extracurricular Activities<small><small><small></small></small> </small>
         <span style="float:right;font-family:verdana;">
           <img src="images/flag_us.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
           <img src="images/flag_uk.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
