--- a/fr-resume.html
+++ b/fr-resume.html
@@ -527,7 +527,7 @@
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="academic-services">
-        <h3>Services Académiques</h3>
+        <h3>Services académiques</h3>
         <ul class="square">
           <!-- <li><strong>Organisations Internationales: </strong><br> -->
           <!-- - <strong>Membre du Groupe de Travail sur la Mobilité Électrique des Transports Intérieurs de la CEE-ONU</strong> (CEE-ONU-ITC-E-MobilityTaskForce, 2024)<br> -->
