--- a/en.html
+++ b/en.html
@@ -262,7 +262,7 @@
             <li><a href="#"> <span class='blue'>Researcher</span> :: <span class='blue'>Engineer</span> :: <span
                   class='blue'>Analyst</span></a></li>
             <p>____</p>
-            <li><a href="en.html"><span style="color: rgb(253, 93, 7);">About Me ⏴</span></a></li>
+            <li><a href="en.html"><span style="color: rgb(253, 93, 7);">Biography ⏴</span></a></li>
             <li><a href="en-research.html">Research</a></li>
             <li><a href="en-resume.html">Résumé</a></li>
             <li><a href="en-activities.html">Activities</a></li>
@@ -395,7 +395,7 @@
           <ul>
             <div style="background-color: rgb(252, 251, 248);">
               <hr>
-              <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="en.html"><small>▸ About Me
+              <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="en.html"><small>▸ Biography
                       ⇨</small></a></strong><br>
               </li>
 
