--- a/es-activities.html
+++ b/es-activities.html
@@ -346,7 +346,7 @@
             <li><a href="#visiting">&nbsp;• Visitando</a></li>
             <li><a href="#travel">&nbsp;• Viajar</a></li>
             <p>____</p>
-            <li><a href="#contacto"><span style="color: rgb(253, 93, 7);">Contacto</span></a></li>
+            <li><a href="#contact"><span style="color: rgb(253, 93, 7);">Contacto</span></a></li>
             <p>____</p>
             <p></p>
             <img src="images/logo.png" width="45" />
