--- a/cn-activities.html
+++ b/cn-activities.html
@@ -1566,8 +1566,7 @@
         <h3>旅行</h3>
         <ul class="square">
           <li><strong>亚洲</strong>：
-            <img class="flag-icon" src="./images/wflags/cn.png" alt="China"> 中国大陆 (13+省/市)、
-            台湾、
+            <img class="flag-icon" src="./images/wflags/cn.png" alt="China"> 中国大陆 (13+省市) & 台湾、
             <img class="flag-icon" src="./images/wflags/ru.png" alt="Russia"> 俄罗斯、
             <img class="flag-icon" src="./images/wflags/tr.png" alt="Turkey"> 土耳其、
             <img class="flag-icon" src="./images/wflags/th.png" alt="Thailand"> 泰国、
@@ -1609,8 +1608,8 @@
             <img class="flag-icon" src="./images/wflags/gi.png" alt="Gibraltar"> 直布罗陀 (英属)
           </li>
           <li><strong>北美</strong>：
-            <img class="flag-icon" src="./images/wflags/ca.png" alt="Canada"> 加拿大、
-            <img class="flag-icon" src="./images/wflags/us.png" alt="United States"> 美国
+            <img class="flag-icon" src="./images/wflags/ca.png" alt="Canada"> 加拿大 (BC, ON)、
+            <img class="flag-icon" src="./images/wflags/us.png" alt="United States"> 美国 (NY, IL, NJ, GA, DC)
           </li>
           <li><strong>非洲</strong>：
             <img class="flag-icon" src="./images/wflags/es.png" alt="Spain"> 大加那利群岛 (西属)
