--- a/es-resume.html
+++ b/es-resume.html
@@ -295,7 +295,7 @@
             <li><a href="es-resume.html"><span style="color: rgb(253, 93, 7);">CV ⏴</span></a></li>
             <li><a href="#education">&nbsp;• Educación</a></li>
             <li><a href="#academic-experience">&nbsp;• Académico</a></li>
-            <li><a href="#experiencia-industrial">&nbsp;• Industrial</a></li>
+            <li><a href="#industrial-experience">&nbsp;• Industrial</a></li>
             <li><a href="#awards">&nbsp;• Premios</a></li>
             <li><a href="es-activities.html">Actividades</a></li>
             <p>____</p>
