--- a/en-resume.html
+++ b/en-resume.html
@@ -451,10 +451,10 @@
           <li>2014-2016 | <strong>MSc, Materials & Physics </strong><br />
             <strong><a href="https://www.tum.de/en/" target="_blank">Technical University of Munich</a></strong>,
             Germany<br />
-            <!-- <strong><a href="https://www.lmu.de/en/" target="_blank">Ludwig Maximilian University of
-                Munich</a></strong>, Germany<br /> -->
-            <strong><a href="https://www.univ-rennes1.fr/" target="_blank">University of Rennes</a></strong>, France
-            <br />
+            <strong><a href="https://www.lmu.de/en/" target="_blank">Ludwig Maximilian University of
+                Munich</a></strong>, Germany<br />
+            <!-- <strong><a href="https://www.univ-rennes1.fr/" target="_blank">University of Rennes</a></strong>, France
+            <br /> -->
             <!--[<a href="https://unknown/files/Master_Thesis_LMU_TUM-Xu_Hong.pdf" target="_blank">Thesis</a>]-->
 
           <li>2009-2013 | <strong>BSc, Materials Chemistry</strong><br />
