Update Journal name

--- a/ar-resume.html
+++ b/ar-resume.html
@@ -530,6 +530,7 @@
             - <strong>Energy Conversion and Management</strong> (عامل التأثير: 11.2، 2021)<br>
             - <strong>Applied Energy</strong> (عامل التأثير: 11.4، 2022)<br>
             - <strong>Journal of Power Sources</strong> (عامل التأثير: 9.13، 2022)<br>
+            - <strong>Renewable Energy</strong> (عامل التأثير: 9.03، 2023)<br>
             - <strong>Energy Strategy Reviews</strong> (عامل التأثير: 8.3، 2023)<br>
             - <strong>International Journal of Hydrogen Energy</strong> (عامل التأثير: 7.14، 2021)<br>
             - <strong>Energy for Sustainable Development</strong> (عامل التأثير: 5.76، 2021)<br>
