--- a/fr-resume.html
+++ b/fr-resume.html
@@ -543,6 +543,7 @@
             - <strong>Energy Conversion and Management</strong> (Facteur d'Impact : 11.2, 2021)<br>
             - <strong>Applied Energy</strong> (Facteur d'Impact : 11.4, 2022)<br>
             - <strong>Journal of Power Sources</strong> (Facteur d'Impact : 9.13, 2022)<br>
+            - <strong>Renewable Energy</strong> (Facteur d'Impact : 9.0, 2023)<br>
             - <strong>Energy Strategy Reviews</strong> (Facteur d'Impact : 8.3, 2023)<br>
             - <strong>International Journal of Hydrogen Energy</strong> (Facteur d'Impact : 7.14, 2021)<br>
             - <strong>Energy for Sustainable Development</strong> (Facteur d'Impact : 5.76, 2021)<br>
