--- a/de-resume.html
+++ b/de-resume.html
@@ -518,6 +518,7 @@
             - <strong>Energy Conversion and Management</strong> (Impact-Faktor: 11.2, 2021)<br>
             - <strong>Applied Energy</strong> (IF: 11.4, 2022)<br>
             - <strong>Journal of Power Sources</strong> (IF: 9.13, 2022)<br>
+            - <strong>Renewable Energy</strong> (IF: 9.0, 2023)<br>
             - <strong>Energy Strategy Reviews</strong> (IF: 8.3, 2023)<br>
             - <strong>International Journal of Hydrogen Energy</strong> (IF: 7.14, 2021)<br>
             - <strong>Energy for Sustainable Development</strong> (IF: 5.76, 2021)<br>
