--- a/en-resume.html
+++ b/en-resume.html
@@ -528,6 +528,7 @@
             - <strong>Energy Conversion and Management</strong> (Impact Factor: 11.2, 2021)<br>
             - <strong>Applied Energy</strong> (Impact Factor: 11.4, 2022)<br>
             - <strong>Journal of Power Sources</strong> (Impact Factor: 9.13, 2022)<br>
+            - <strong>Renewable Energy</strong> (Impact Factor: 9.0, 2023)<br>
             - <strong>Energy Strategy Reviews</strong> (Impact Factor: 8.3, 2023)<br>
             - <strong>International Journal of Hydrogen Energy</strong> (Impact Factor: 7.14, 2021)<br>
             - <strong>Energy for Sustainable Development</strong> (Impact Factor: 5.76, 2021)<br>
