--- a/es-resume.html
+++ b/es-resume.html
@@ -530,6 +530,7 @@
             - <strong>Energy Conversion and Management</strong> (Factor de Impacto: 11.2, 2021)<br>
             - <strong>Applied Energy</strong> (Factor de Impacto: 11.4, 2022)<br>
             - <strong>Journal of Power Sources</strong> (Factor de Impacto: 9.13, 2022)<br>
+            - <strong>Renewable Energy</strong> (Factor de Impacto: 9.0, 2023)<br>
             - <strong>Energy Strategy Reviews</strong> (Factor de Impacto: 8.3, 2023)<br>
             - <strong>International Journal of Hydrogen Energy</strong> (Factor de Impacto: 7.14, 2021)<br>
             - <strong>Energy for Sustainable Development</strong> (Factor de Impacto: 5.76, 2021)<br>
