--- a/it-resume.html
+++ b/it-resume.html
@@ -540,6 +540,7 @@
             - <strong>Energy Conversion and Management</strong> (Fattore di Impatto: 11.2, 2021)<br>
             - <strong>Applied Energy</strong> (Fattore di Impatto: 11.4, 2022)<br>
             - <strong>Journal of Power Sources</strong> (Fattore di Impatto: 9.13, 2022)<br>
+            - <strong>Renewable Energy</strong> (Fattore di Impatto: 9.0, 2023)<br>
             - <strong>Energy Strategy Reviews</strong> (Fattore di Impatto: 8.3, 2023)<br>
             - <strong>International Journal of Hydrogen Energy</strong> (Fattore di Impatto: 7.14, 2021)<br>
             - <strong>Energy for Sustainable Development</strong> (Fattore di Impatto: 5.76, 2021)<br>
