--- a/it.html
+++ b/it.html
@@ -591,21 +591,106 @@
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
-      <div class="doc-section" id="travel">
-        <h3>Viaggio</h3>
-        <ul class="square">
-          <li><strong>Asia</strong>: Cina (continente), Taiwan, Russia, Turchia, Tailandia</li>
-          <li><strong>Europa</strong>: Austria, Belgio, Bosnia ed Erzegovina, Croazia,
-            Repubblica Ceca, Danimarca, Estonia, Finlandia, Francia, Germania (oltre 25 città), Gibilterra, Ungheria,
-            Islanda,
-            Irlanda, Italia, Liechtenstein, Lussemburgo, Malta, Paesi Bassi, Norvegia, Portogallo, Polonia, Serbia,
-            Slovenia, Spagna, Svezia, Svizzera (oltre 30 città), Regno Unito</li>
-          <li><strong>Nord America</strong>: Stati Uniti, Canada</li>
-          <li><strong>Africa</strong>: Gran Canaria (Spagna)</li>
-          <li><strong>In totale</strong>: 35 paesi/regioni visitati su 197 in tutto il mondo</li>
-          <img src="/images/visited_map.gif" style="width:100%;" alt="Example GIF">
-        </ul>
+      <div class="doc-section hidden-mobile" id="Carbon-Neutral">
+        <h3 class="hidden-mobile" style="display:inline-block">Obiettivi di sviluppo sostenibile 2030</h3>
+        <div style="float: right">
+          <h3>
+            <!-- weather widget start --><a class="hidden-mobile" id="weather" target="_blank"
+              href="https://www.booked.net/weather/beijing-18391"><img
+                src="https://w.bookcdn.com/weather/picture/5_18391_1_1_137AE9_160_ffffff_333333_08488D_1_ffffff_333333_0_6.png?scode=124&domid=w209&anc_id=60060"
+                width="100px" alt="booked.net" style="margin-left: 110px; margin-top: -10px;" /></a>
+            <!-- weather widget end -->
+          </h3>
+        </div>
+
       </div>
+
+      <div class="doc-section display-mobile" id="Carbon-Neutral" style="width:113%">
+        <h3 class="display-mobile" style="display:inline-block">Obiettivi di sviluppo sostenibile 2030</h3>
+
+        <!---
+-->
+      </div>
+
+      <div class="doc-section" id="sdgs">
+
+
+        <div class="slideshow-container">
+
+          <div class="mySlides fade">
+            <div class="numbertext"></div>
+            <img class="hidden-mobile" src="images/sdg/slider_sdg_it.png" style="width:100%">
+            <img class="display-mobile" src="images/sdg/slider_sdg_it_mobi.png" style="width:100%">
+            <div class="text"></div>
+          </div>
+
+          <div class="mySlides fade">
+            <div class="numbertext"></div>
+            <img class="hidden-mobile" src="images/sdg/slider_sdg7_it.png" style="width:100%">
+            <img class="display-mobile" src="images/sdg/slider_sdg7_it_mobi.png" style="width:100%">
+            <div class="text"></div>
+          </div>
+
+          <div class="mySlides fade">
+            <div class="numbertext"></div>
+            <img class="hidden-mobile" src="images/sdg/slider_sdg8_it.png" style="width:100%">
+            <img class="display-mobile" src="images/sdg/slider_sdg8_it_mobi.png" style="width:100%">
+            <div class="text"></div>
+          </div>
+
+          <div class="mySlides fade">
+            <div class="numbertext"></div>
+            <img class="hidden-mobile" src="images/sdg/slider_sdg9_it.png" style="width:100%">
+            <img class="display-mobile" src="images/sdg/slider_sdg9_it_mobi.png" style="width:100%">
+            <div class="text"></div>
+          </div>
+
+          <div class="mySlides fade">
+            <div class="numbertext"></div>
+            <img class="hidden-mobile" src="images/sdg/slider_sdg11_it.png" style="width:100%">
+            <img class="display-mobile" src="images/sdg/slider_sdg11_it_mobi.png" style="width:100%">
+            <div class="text"></div>
+          </div>
+
+          <div class="mySlides fade">
+            <div class="numbertext"></div>
+            <img class="hidden-mobile" src="images/sdg/slider_sdg13_it.png" style="width:100%">
+            <img class="display-mobile" src="images/sdg/slider_sdg13_it_mobi.png" style="width:100%">
+            <div class="text"></div>
+          </div>
+
+          <div class="mySlides fade">
+            <div class="numbertext"></div>
+            <img class="hidden-mobile" src="images/sdg/slider_sdg14_it.png" style="width:100%">
+            <img class="display-mobile" src="images/sdg/slider_sdg14_it_mobi.png" style="width:100%">
+            <div class="text"></div>
+          </div>
+
+          <a class="prev" onclick="plusSlides(-1)">❮</a>
+          <a class="next" onclick="plusSlides(1)">❯</a>
+
+        </div>
+
+
+
+        <div style="text-align:center">
+          <span class="dot" onclick="currentSlide(1)"></span>
+          <span class="dot" onclick="currentSlide(2)"></span>
+          <span class="dot" onclick="currentSlide(3)"></span>
+          <span class="dot" onclick="currentSlide(4)"></span>
+          <span class="dot" onclick="currentSlide(5)"></span>
+          <span class="dot" onclick="currentSlide(6)"></span>
+          <span class="dot" onclick="currentSlide(7)"></span>
+        </div>
+
+
+
+        <!---<img class="hidden-mobile" src="images/SDG_all.png" style="width:100%" alt="">
+          <img class="display-mobile" src="images/SDG_all.png" style="width:100%" alt="">--->
+
+
+      </div>
+
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
